--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,13 @@
 <body>
     <div class="spaceContainer">
         <canvas class="zdog-canvas"></canvas>
-        <input id="zoomRange" type="range" min="1" max="100" value="50">
+        <div id="uiContainer">
+            <input id="zoomRange" type="range" min="1" max="60" value="1">
+            <div id="searchContainer">
+                <input id="bodySearch" type="search" name="" id="">
+                <input id="bodySearchBtn" type="button" value="Go">
+            </div>
+        </div>
     </div>
 </body>
 
