refactorizacion de codigo. bindeo de zoom a rueda del raton.

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script defer src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
-    <script defer src="js/script.js"></script>
+    <script defer src="js/script.js" type="module"></script>
     <title>Space!</title>
 </head>
 
@@ -14,7 +14,7 @@
     <div class="spaceContainer">
         <canvas class="zdog-canvas"></canvas>
         <div id="uiContainer">
-            <input id="zoomRange" type="range" min="1" max="60" value="1">
+            <input id="zoomRange" type="range" min="1" max="350" value="1">
             <div id="searchContainer">
                 <input id="bodySearch" type="search" name="" id="">
                 <input id="bodySearchBtn" type="button" value="Go">
