--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,42 @@
             <input id="zoomRange" type="range" min="1" max="350" value="1">
             <div id="searchContainer">
                 <input id="bodySearch" type="search" name="" id="">
+                <select id="bodySelect">
+                    <option value=sun >Sun</option>
+                    <option value=mercury>Mercury</option>
+                    <option value=venus>Venus</option>
+                    <option value=earth>Earth</option>
+                    <option value=moon>- Moon</option>
+                    <option value=mars>Mars</option>
+                    <option value=phobos>- Phobos</option>
+                    <option value=deimos>- Deimos</option>
+                    <option value=pallas>- Pallas</option>
+                    <option value=ceres>- Ceres</option>
+                    <option value=juno>- Juno</option>
+                    <option value=vesta>- vesta</option>
+                    <option value=jupiter>Jupiter</option>
+                    <option value=io>- Io</option>
+                    <option value=europa>- Europa</option>
+                    <option value=ganymede>- Ganymede</option>
+                    <option value=callisto>- Callisto</option>
+                    <option value=saturn>Saturn</option>
+                    <option value=mimas>- Mimas</option>
+                    <option value=enceladus>- Enceladus</option>
+                    <option value=tethys>- Tethys</option>
+                    <option value=dione>- Dione</option>
+                    <option value=rhea>- Rhea</option>
+                    <option value=titan>- Titan</option>
+                    <option value=hyperion>- Hyperion</option>
+                    <option value=iapetus>- Iapetus</option>
+                    <option value=uranus>Uranus</option>
+                    <option value=miranda>- Miranda</option>
+                    <option value=ariel>- Ariel</option>
+                    <option value=umbriel>- Umbriel</option>
+                    <option value=titania>- Titania</option>
+                    <option value=oberon>- Oberon</option>
+                    <option value=neptune>Neptune</option>
+                    <option value=triton>- Triton</option>
+                </select>
                 <input id="bodySearchBtn" type="button" value="Go">
             </div>
         </div>
